# bookstore

./: .flake8  .gitignore  Dockerfile  docker-compose.yml  env.dev  manage.py  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore_project/: asgi.py  settings.py  urls.py  wsgi.py
order/: admin.py
order/migrations/: 0001_initial.py
order/serializers/: __init__.py  order_serializers.py
order/tests/: test_models.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py
product/migrations/: 0001_initial.py
product/serializers/: __init__.py  product_serializers.py
product/tests/: test_serializers.py
product/tests/test_serializers/: test_category_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
