[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Inglez",email = "gugainglez@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-debug-toolbar (>=6.3.0,<7.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "black (>=26.3.1,<27.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bookstore_project.settings"
python_files = ["test_*.py", "*_test.py"]
norecursedirs = ["*.egg", ".git", ".venv", "__pycache__"]